# NAT_UDP

./: CMakeLists.txt  Makefile  README.md
common/: CMakeLists.txt  Makefile  cmake_install.cmake  protocol.h  sock.h
common/unix/: CMakeLists.txt  Makefile  cmake_install.cmake  sock.cpp  sock.h
common/windows/: CMakeLists.txt  NetDaemon.cpp  NetDaemon.h  WinSock.cpp  WinSock.h
linux_client/: unix_client.cpp  unix_client.h  unix_client_message_parser.h
server/: server.cpp  server.h  server_message_parser.h
unix_client/: CMakeLists.txt  Makefile  cmake_install.cmake  unix_client.cpp  unix_client.h  unix_client_message_parser.cpp  unix_client_message_parser.h
unix_server/: CMakeLists.txt  Makefile  cmake_install.cmake  server.cpp  server.h  server_message_parser.cpp  server_message_parser.h
windows_client/: CMakeLists.txt
windows_client/msys2/: README.txt
windows_client/win32/NAT_UDP_Client/: NAT_UDP_Client.opensdf  NAT_UDP_Client.sln
windows_client/win32/NAT_UDP_Client/NAT_UDP_Client/: NAT_UDP_Client.cpp  NAT_UDP_Client.vcxproj  NAT_UDP_Client.vcxproj.filters
windows_client/win32/NAT_UDP_Client/ipch/nat_udp_client-c0eec6a1/: nat_udp_client-85b5abf5.ipch
windows_client/win32/NAT_UDP_Client/src/: NAT_UDP_Client.cpp
